<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/HomeFragmentPage">


    <fragment
        android:id="@+id/HomeFragmentPage"
        android:name="com.universalspirituality.quotesfromswami.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

    </fragment>
    <fragment
        android:id="@+id/SettingsFragmentPage"
        android:name="com.universalspirituality.quotesfromswami.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/activity_settings"/>

    <fragment
        android:id="@+id/AboutFragmentpage"
        android:name="com.universalspirituality.quotesfromswami.AboutFragment"
        android:label="@string/about_fragment_label"
        tools:layout="@layout/activity_about"/>

</navigation>
