<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:text="@string/title_choose_frequency"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group_frequency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_button_30_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/frequency_30_minutes"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radio_button_1_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency_1_hour"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radio_button_3_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency_3_hours"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radio_button_6_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency_6_hours"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radio_button_1_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency_1_day"
            android:textColor="@color/white" />

    </RadioGroup>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="140dp"
        android:text="@string/save_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_frequency" />
    <TextView
        android:id="@+id/text_view_selected_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_save" />

</androidx.constraintlayout.widget.ConstraintLayout>
